jsonschemadsl2ecore.trafo.opt/test/test91/validtests/example6.test91
{
	"baz":"Error",
	"quax":"Warn",
	"bazzz":{
		"foo":"Warn"
	},
	"foossss":"Info"
}