jsonschemadsl2ecore.trafo.opt/test/test91/invalidtests/example2.test91
{
	"baz":"Error no good",
	"quax":"Warn",
	"bazzz":{
		"foo":"Warn"
	},
	"foossss":"Fatal"
}